ui: fix inbleeding between components

--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -1,4 +1,4 @@
-/* nav {
+.navbar_top {
     padding: 3%;
     display: flex;
     justify-content: center;
@@ -24,7 +24,7 @@
     font-weight: bold;
 }
 
-ul{
+.md-4{
     margin-left: 18%;
     padding: 1% 0;
     display: flex;
@@ -35,12 +35,12 @@ ul{
     list-style: none;
 }
 
-li {
+.navBar_link-item {
     height: 10%;
     padding: 0 1.3%;
 }
 
-.navBar_link-item a {  
+.navBar_link-item a {
     position: relative;
     display: inline-block;
     vertical-align: middle;
@@ -54,10 +54,11 @@ li {
 }
 
 .navBar_link-item a:hover {
+    color: #fff;
     font-weight: bolder;
 }
 
-button {
+.navBar_apply-now {
     width: 18em;
     height: 3em;
     margin-left: 1.3%;
@@ -67,9 +68,4 @@ button {
     font-size: 0.9rem;
     font-weight: bolder;
     mix-blend-mode: color-dodge;
-}x
-
-a {
-    color: #114169;
-    text-decoration: none;
-} */
+}
